Incorrect link on that last commit.

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@ on topics covered in <a href="research.html"><font color="#e5786d">/research</fo
 A list of my <a href="software.html">favorite software</a>.
 <br>
 <br>
-<a href="information.html">Information</a> on this website.
+<a href="info.html">Information</a> on this website.
 <p class=bottom>
 <a href="mailto:benseefeldt@gmail.com">email</a>
 
